--- a/test.html
+++ b/test.html
@@ -1,3 +1,17 @@
- <h1>Hey. I'm a big Heading</h1>
- <p>Hey. I'm a paragraph element. Cool huh? </p>
- <a href="https://google.com" target="blank">Click me! I'm a link!</a>
+ <!DOCTYPE html>
+ <<!DOCTYPE html>
+ <html>
+ <head>
+ 	<meta charset="utf-8">
+ 	<meta name="viewport" content="width=device-width, initial-scale=1">
+ 	<title>Test page</title>
+ </head>
+ <body>
+ 	 <h1>Hey. I'm a big Heading</h1>
+ 	<p>Hey. I'm a <b>paragraph</b> element. Cool huh? </p>
+ 	<a href="https://google.com" target="blank" title="Let's go to Goggle">Click me! I'm a link!</a> 
+<p> My name is: <br>
+Yellow</p> <br>
+ 		<img src="https://www.bahamas.gov.bs/wps/wcm/connect/32ee69d0-e1a3-4127-945a-3cceece0a41d/1/Yellow+Elder.jpg?MOD=AJPERES&CACHEID=32ee69d0-e1a3-4127-945a-3cceece0a41d/1">
+ </body>
+ </html>
